# Framegen

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  WEIGHTS_LICENSE.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/framecast-native/: Cargo.toml  build.rs
crates/framecast-native/csrc/: test_main.cpp
crates/framecast-native/src/: lib.rs
crates/framecast-native/tests/: parity.rs
crates/framegen-native/: Cargo.toml
crates/framegen-native/src/: trt.rs  warp.rs
crates/framegen-native/src/io/: mod.rs  video.rs
crates/framegen-native/tests/: parity.rs
crates/rife-core/: Cargo.toml
crates/rife-core/src/: lib.rs  prepost.rs
crates/rife-wgpu/: Cargo.toml
crates/rife-wgpu/examples/: verify.rs
crates/rife-wgpu/src/: lib.rs
csrc/: trt_shim.cpp
demo/: mid_pytorch.rgb  rt_expected_256.rgb  rt_expected_256_slim.rgb  rt_expected_256_slim60.rgb
docs/: TECHNICAL.md  exp-anime-specialist.md  exp-dual-mid.md  exp-subgroups.md  perf-2026-07-16.md  phase2_ortweb_ceiling.md  phase5_ablation.md  result.md  rife_lite_reference.md
docs/store/: listing.md  privacy-policy.md
docs/superpowers/plans/: 2026-07-02-browser-demo.md  2026-07-02-rife-core-trait.md  2026-07-02-slowmo.md
docs/superpowers/specs/: 2026-07-02-browser-demo-design.md  2026-07-02-rife-core-trait-design.md  2026-07-02-slowmo-design.md
experiments/subgroup-matrix/: README.md  check_f16_feature.mjs  correctness_int8.mjs  gemm_f16.mjs  gemm_int8.mjs
extension/: LICENSE  content.js  manifest.json  popup.html  popup.js  rules.json
models/: rife_lite_student_1blk_manifest.json  rife_lite_student_1blk_slim60_manifest.json  rife_lite_student_1blk_slim_manifest.json
src/: imgutil.rs  lib.rs  model.rs  trt.rs
src/io/: ffmpeg.rs  mod.rs  video.rs  video_trt.rs
tests/: parity.rs
tools/: bench_trt.py  build_extension.ps1  build_trt_engine.py  build_trt_int8.py  clean_logo.py  collect_server.py  compare_pytorch.py  convert_weights.py  eval_tfact_arb.py  export_ablation.py  export_fp16.py  export_onnx.py  export_rt_weights.py  export_sr_weights.py  export_tfact_weights.py  export_u8.py  export_u8_web.py  extract_frames.py  make_icon.py  make_restorer_pairs.py  make_teacher_v7.py  make_tfact_ref.py  psnr_compare.py  quality_bench.py  restore_pkl.py  train_anime_spec.py  train_box_bootstrap.sh  train_restorer.py  train_sr.py  train_sr2.py  train_student.py  train_tfact.py  train_tfact2.py  train_v7.py  trt_compare.py
web/: README.md  bench.html  bench_sr.html  demo.html  exttest.html  package.json  player.html  player_worker.js  prepost.test.js  probe.html  rife_prepost.js  rife_session.js  rt_test.html  slowmo.html  slowmo.js  slowmo.test.js  spike.html  sr_quality.html  store_shots.html  webnn_autotest.html
web/rt/: rt.js  sr.js
