[workspace]
members = [".", "crates/rife-core"]

[package]
name = "framecast"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "RIFE-Lite (RIFEm) frame interpolation — Rust/candle inference, offline-first, wasm/webgpu later"

[lib]
name = "framecast"
path = "src/lib.rs"

[[bin]]
name = "rife-interpolate"
path = "src/bin/interpolate.rs"
required-features = ["bin"]

[[bin]]
name = "rife-smoke"
path = "src/bin/smoke.rs"
required-features = ["bin"]

[[bin]]
name = "rife-profile"
path = "src/bin/profile.rs"
required-features = ["bin"]

[[bin]]
name = "rife-trt-bench"
path = "src/bin/trt_bench.rs"
required-features = ["bin", "trt"]

[[bin]]
name = "rife-trt"
path = "src/bin/trt_video.rs"
required-features = ["bin", "trt"]

[features]
default = ["bin"]
bin = ["dep:clap", "dep:image"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
cudnn = ["cuda", "candle-core/cudnn", "candle-nn/cuda"]
# Native in-process TensorRT inference via C++ shim (requires nvinfer_10 + CUDA, MSVC).
trt = []
# Future: wasm/webgpu target
# wasm = ["candle-core/wasm", "candle-nn/wasm"]
# wgpu = ["candle-core/wgpu"]

[build-dependencies]
cc = "1"

[dependencies]
rife-core = { path = "crates/rife-core" }
candle-core = "0.11"
candle-nn = "0.11"
anyhow = "1"
half = "2"
clap = { version = "4", features = ["derive"], optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
