[package]
name = "rife-wgpu"
version = "0.1.0"
edition = "2021"
description = "Framecast custom runtime on wgpu — same WGSL kernels as the browser, native on any GPU (no TensorRT/CUDA)"

[dependencies]
wgpu = "30"
pollster = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = "1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[[example]]
name = "verify"
